--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
       "plugins": ["react", "@typescript-eslint"],
       "rules": {
         "indent": ["error", 2],
-        "linebreak-style": ["error", "windows"],
+        "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
         "semi": ["error", "always"]
       }
