--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@utils/*": ["./src/utils/*"],
       "@shared/*": ["./src/shared/*"],
       "@styles/*": ["./src/styles/pages/*"]
     }
